--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,8 +6,12 @@ html, body {
   font-family: Roboto, Arial, sans-serif;
 }
 
-#left-bar {
-  overflow: hidden;
+#container {
+  min-height: 100%;
+}
+
+#nav-bar {
+  overflow: scroll;
   width: 200px;
   background-color: #17181B;
   color: #585858;
@@ -25,7 +29,7 @@ html, body {
 
 #profile-pic {
   position: absolute;
-  float: left;
+  float: nav;
   width: 100%;
   height: 100%;
   z-index: 1;
@@ -65,10 +69,7 @@ hr {
   color: #e1e1e1;
 }
 
-#container {
-  min-height: 100%;
-  border: solid 1px black;
-}
+
 
 
 #linkedin {
@@ -78,7 +79,7 @@ hr {
   margin-bottom: 20px;
 }
 
-#left-footer {
+#nav-footer {
   width: 200px;
   position: absolute;
   bottom: 0;
@@ -95,20 +96,42 @@ ul {
 }
 
 i {
-  position: absolute;
-  left: 30px;
+  position: relative;
+  left: -20px;
   font-size: 26px;
 }
 
+#mobile-nav-icon {
+  margin-top: 10px;
+  margin-right: 20px;
+  display: none;
+  float: right;
+  font-size: 12px;
+  margin-right: 40px;
+}
 
-
-
+@media screen and (max-height: 586px) {
+  #linkedin {
+    display: none;
+  }
+}
 
 /* Width at 768px and below */
 @media screen and (max-width: 768px) {
-  #left-bar {
+  #nav-bar:hover {
     width: 100%;
     height: 200px;
+  }
+
+  #mobile-nav-icon {
+    display: inline-block;
+  }
+
+  #nav-bar {
+    width: 100%;
+    height: 40px;
+    overflow: hidden;
+
   }
 
   #profile-con{
@@ -135,7 +158,7 @@ i {
     margin-right: 40px;
   }
 
-  #left-footer {
+  #nav-footer {
     display: none;
   }
 
