--- a/assets/css/content.css
+++ b/assets/css/content.css
@@ -1,17 +1,17 @@
 /* 585858 is faded grey font color
    979797 highlighted color
    e1e1e1 is white font color
-   17181B is background color - can use to make text invisible 
+   17181B is background color - can use to make text invisible   background-color: #6B6C6D;
 */
 
 #content {
     width: 100%;
     height: 100%;
-    border: solid 1px red;
     position: absolute;
     left: 200px;
     top: 0px;
     display: block;
+    background-color: #2c2d2f;
 }
 
 
@@ -38,6 +38,8 @@ section {
     #content {
         left: 0px;
         top: 40px;
+        border-top: solid 1px black;
+        
     }
     
   }
