--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -11,6 +11,7 @@
   height: 100%;
   font-size: 24px;
   margin-bottom: 20px;
+  border-right: solid 1px black;
 }
 
 #profile-con {
@@ -95,6 +96,7 @@ i {
   #nav-bar {
     width: 100%;
     height: 40px;
+    border-right: unset;
   }
 
   ul {
