--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -95,7 +95,7 @@ i {
 
   #nav-bar {
     width: 100%;
-    height: 40px;
+    height: 60px;
     border-right: unset;
   }
 
@@ -110,11 +110,13 @@ i {
   }
 
   .nav-item {
-    margin-left: 15px;
+    margin-left: 20px;
   }
 
   i {
+    top: 10px;
     left: unset;
+    font-size: 36px;
   }
 
   #mobile-name {
@@ -125,8 +127,8 @@ i {
   }
 
   #bitmoji-pic {
-    height: 40px;
-    width: 40px;
+    height: 60px;
+    width: 60px;
     padding: 2px;
   }
 
