--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -89,51 +89,46 @@ i {
 }
 
 @media screen and (max-width: 768px) {
-  #profile-con, #nav-footer {
+  #nav-bar {
     display: none;
   }
-
-  #nav-bar {
+  #mobile-nav {
     width: 100%;
     height: 60px;
-    border-right: unset;
-  }
-
-  ul {
-    display: none
-  }
-
-  #mobile-nav {
     display: block;
-    float: right;
-    margin-right: 10px;
+    position: absolute;
+    margin: auto;
   }
-
   .nav-item {
-    margin-left: 20px;
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    margin-left: 40px;
   }
-
+  ul {
+    width: 100%;
+    margin: 0 auto;
+    list-style: none;
+  }
+  li {
+    float: left;
+  }
   i {
-    top: 10px;
-    left: unset;
     font-size: 36px;
+    top: 10px;
   }
-
-  #mobile-name {
+  /*#mobile-name {
     position: fixed;
     left: 10px;
     top: 0px;
     color: #fff;
-  }
-
+  }*/
   #bitmoji-pic {
     height: 60px;
     width: 60px;
     padding: 2px;
   }
-
   h6 {
-    display: inline-block;
+    display: none;
   }
-  
 }
