--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -127,9 +127,9 @@ i {
   }
 
   #bitmoji-pic {
-    height: 60px;
-    width: 60px;
-    padding: 2px;
+    height: 50px;
+    width: 50px;
+    margin-top: 10px;
   }
 
   h6 {
