--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -121,7 +121,7 @@ i {
 
   #mobile-name {
     position: fixed;
-    left: 10px;
+    left: 4px;
     top: 0px;
     color: #fff;
   }
@@ -134,6 +134,14 @@ i {
 
   h6 {
     display: inline-block;
+    color: #8d8d8d;
   }
   
+}
+
+@media screen and (max-width: 500px) {
+  i {
+    top: 15px;
+    font-size: 30px;
+  }
 }
