--- a/assets/css/content.css
+++ b/assets/css/content.css
@@ -14,9 +14,9 @@
     background-color: #2c2d2f;
     overflow-y: scroll;
 }
- 
+
 #content::-webkit-scrollbar {
- display: none;
+    display: none;
 }
 
 #back-home {
@@ -31,14 +31,48 @@
 #resume {
     width: 700px;
     height: 1000px;
-   
     margin: 20px;
 }
 
-section {
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 126, 84, 0.2);
+    transition: 0.3s;
+    width: 200px;
+    height: 260px;
+    border-radius: 5px;
+    background-color: #e1e1e1;
     float: left;
-    margin: 20px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    padding: 10px;
+    text-align: center;
+    font-family: 'Rubik Mono One', sans-serif;
 }
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(145, 145, 145, 0.2);
+}
+
+.card img {
+    height: 70%;
+}
+
+.card h5 {
+    margin-bottom: 8px;
+}
+
+#contact-container {
+    margin-top: 40px;
+    width: 480px;
+}
+
+#linkedin-dark {
+    width: 160px;
+    height: 30px;
+    margin-left: 10px;
+    margin-bottom: 20px;
+  }
+
 
 #portfolio {
     display: none;
@@ -49,5 +83,10 @@ section {
         left: 0px;
         top: 60px;
         border-top: solid 1px black;
+    }
+
+    #contact-container {
+        margin-top: 40px;
+        width: 300px;
     }
 }
