--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@
 html, body {
     height: 100%;
     width: 100%;
-    font-family: Roboto, Arial, sans-serif;
+    font-family: 'Roboto', sans-serif;
     background-color: #17181B;
   
   }
