--- a/assets/css/content.css
+++ b/assets/css/content.css
@@ -51,6 +51,10 @@
     margin-top: 20px;
 }
 
+#png-resume {
+    display: none;
+}
+
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 126, 84, 0.2);
     transition: 0.3s;
@@ -133,6 +137,13 @@ h1 {
     #resume-container {
         width: 400px;
         margin-top: 20px;
+    }
+    #pdf-resume {
+        display: none;
+    }
+    #png-resume {
+        display: inline-block;
+        width: 400px;
     }
     #contact-container {
         margin-top: 20px;
