--- a/assets/css/content.css
+++ b/assets/css/content.css
@@ -89,6 +89,10 @@
   font-family: "Rubik Mono One", sans-serif;
 }
 
+#blog-container {
+  margin-right: 200px;
+}
+
 h1 {
   text-align: center;
   color: #e1e1e1;
